# PersonalWorks

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeProjectOptions.cmake  CommonProps.props  CppProperties.json  Directory.Build.props  Directory.Build.targets  GenerateProjects.bat  OpenCppCoverage.config.txt  README  README.md  Tests.runsettings  _clang-format  _clang-tidy  premake5.lua  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json  gitconfig-identity.sh
.github/: FUNDING.yml
.github/actions/benchmarks/: action.yml
.github/actions/setup_cache/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: benchmarks.yml  build.yml  ci.yml  personalworks.yml  personnalworks-benchmarks.yml  personnalworks-build.yml  personnalworks-tests.yml  tests.yml  workflow-composite.yml  workflow.yml
CMake/: BenchmarkTarget.cmake  BuildOutput.cmake  BuildTypes.cmake  Cache.cmake  ClangFormat.cmake  CodeHardening.cmake  CompileShader.cmake  CompilerWarnings.cmake  DefaultProjectSettings.cmake  Doxygen.cmake  Fuzzer.cmake  GetCPM.cmake  InterproceduralOptimization.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalizers.cmake  StaticAnalyzers.cmake  TargetSources.cmake  Targets.cmake  TestDependencies.cmake  TestTarget.cmake  Utilities.cmake  ValidateVcpkgToolchain.cmake  VulkanDependencies.cmake
CMakePresets/: BuildVariant.json  Generators.json  Platforms.json  Toolchain.json
Documentation/: CiCDTestPerfDashboard.md
Documentation/sphinx/: generateDocumentation.ps1  requirements.txt
Projects/AppCore/: premake5.lua
Projects/ApplicationCore/: CMakeLists.txt
Projects/ApplicationCore/ApplicationCore/Application/: Application.cpp  Application.h  Application.test.cpp  ApplicationEventMediator.cpp  ApplicationEventMediator.h
Projects/ApplicationCore/ApplicationCore/Application/Win32/: Win32Application.cpp  Win32Application.h  Win32ApplicationDesc.h  Win32ApplicationMainLoop.cpp  Win32ApplicationMainLoop.h  Win32MessageLoop.h
Projects/ApplicationCore/ApplicationCore/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Projects/ApplicationCore/ApplicationCore/Input/Win32/: Win32Input.cpp  Win32Input.h
Projects/ApplicationCore/ApplicationCore/Window/: Event.cpp  Event.h  Window.cpp  Window.h  WindowDesc.h  WindowImpl.cpp  WindowImpl.h
Projects/ApplicationCore/ApplicationCore/Window/Win32/: Win32EventQueue.cpp  Win32EventQueue.h  Win32Window.cpp  Win32Window.h
Projects/BasicWindowApp/: BasicWindowAppMain.test.cpp  CMakeLists.txt  premake5.lua
Projects/BasicWindowApp/BasicWindowApp/: BasicWindowApp.cpp  BasicWindowApp.test.cpp  main.cpp
Projects/Config/: CMakeLists.txt
Projects/Config/Config/: Config.h.in
Projects/Core/: CMakeLists.txt  CoreMain.benchmark.cpp  CoreMain.test.cpp  premake5.lua
Projects/Core/Core/: AppFrameTimer.h  Assert.h  Config.h  ConfigGenerated.h.in  Core.benchmark.cpp  Core.ixx  CoreConcepts.ixx  CoreMain.test.cpp  CoreSingleton.ixx  CoreUtility.ixx  Endian.cpp  Endian.h  EnumClassFlags.h  EnumClassFlags.test.cpp  ErasedStorage.benchmark.cpp  ErasedStorage.ixx  ErasedStorage.test.cpp  Exception.h  Exception.test.cpp  GoogleBenchmark.h  GoogleTest.h  NonCopyable.h  Overloaded.h  PathUtils.h  Pimpl.h  Pimpl.test.cpp  StaticFunction.benchmark.cpp  StaticFunction.ixx  StaticFunction.test.cpp
Projects/Core/Core/BuildConfig/: BuildConfig.hunit.h  BuildConfig.ixx  BuildConfig.test.cpp  BuildConfigArchitecture.hunit.h  BuildConfigCompiler.hunit.h  BuildConfigPlatform.hunit.h
Projects/Core/Core/DelegateTypes/: EventDispatcher.cpp  EventDispatcher.h  EventDispatcher.test.cpp  EventQueue.cpp  EventQueue.h  EventQueue.test.cpp
Projects/Core/Core/Delegates/: Delegate.benchmark.cpp  Delegate.ixx  Delegate.test.cpp  DelegateCommon.test.h  DelegateCommonTestCode.h  DelegateCompare.benchmark.cpp  DelegateMulticast.benchmark.cpp  DelegateMulticast.ixx  DelegateMulticast.test.cpp  DelegateMulticastCommon.test.h  DelegateStdFunction.h
Projects/Core/Core/TestUtilities/: TestStruct.test.cpp  TestStruct.test.h
Projects/Core/Core/Win32/: StringUtils.cpp  StringUtils.h  Win32Utility.h  WindowsHeader.h
Projects/Gfx/: CMakeLists.txt
Projects/Gfx/Gfxal/: CMakeLists.txt  GfxalMain.test.cpp
Projects/Gfx/Gfxal/Gfxal/: Gfx.benchmark.cpp  Gfx.test.cpp  Gfxal.ixx
Projects/Gfx/Gfxal/Gfxal/Vkal/: Context.ixx  DebugMsg.ixx  Device.ixx  PhysicalDevice.ixx  Utilities.cxx  Utilities.ixx  Vk.cpp  Vk.h  VkDefines.h  VkPhysicalDevice.benchmark.cpp  Vkal.ixx  VulkanSystem.cxx  VulkanSystem.ixx  VulkanSystem.test.cpp
Projects/GfxPlaygroundApp/: premake5.lua
Projects/OnnxInferenceApp/: premake5.lua
Projects/OnnxRT/: premake5.lua
Projects/TestBenchmarkUtilities/: CMakeLists.txt
Projects/TestUtilities/: CMakeLists.txt
Projects/TestUtilities/TestUtilities/: BasicTests.cpp  BasicTests.h  BasicTests.test.cpp  BasicTestsFriend.h  BasicTestsGenerator.cpp  BasicTestsGenerator.h  Config.h  ConfigGenerated.h.in  GoogleTest.h  TestStruct.benchmark.h  TestStruct.test.h  TestsFriend.cpp  TestsFriend.h
Scripts/: RunPremake5Vs2019.bat
Tests/: CMakeLists.txt  GoogleBenchmark.h  main.test.cpp
Tests/TestUtilities/: TestStruct.benchmark.cpp  TestStruct.test.cpp  TestStruct.test.h
Tools/GBenchmarkTool/: GBenchmarkCompare.ps1
Tools/Graphviz/: Pathplan.lib  ast.lib  cdt.lib  cgraph.lib  circogen.lib  dot.lib  dotgen.lib  edgepaintlib.lib  expr.lib  fdpgen.lib  glcomp.lib  gvc.lib  gvortho.lib  gvpack.lib  gvplugin_core.lib  gvplugin_dot_layout.lib  gvplugin_gd.lib  gvplugin_gdiplus.lib  gvplugin_neato_layout.lib  gvplugin_pango.lib  gvprlib.lib  ingraphs.lib  lab_gamut.lib  minglelib.lib  neatogen.lib  osage.lib  patchwork.lib  rbtree.lib  sfdp.lib  sfio.lib  smyrna.lib  sparse.lib  topfish.lib  twopigen.lib  vmalloc.lib  vpsc.lib  xdot.lib
Tools/UploadDataToMongoDb/: ConfigGCloudEnv.ps1  go.mod  go.sum  main.go
Vcpkg/ChainloadToolchains/: linux-clang.chainload.cmake
Vcpkg/OverlayTriplets/: x64-linux-clang-libcxx.cmake
(+52 files in other folders)
